Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -69,8 +69,8 @@
 
 .headers h1,
 .headers h2,
-.road-sign,
-.phone {
+.call-button,
+.phone-number {
     opacity: 0;
 }
 
@@ -83,14 +83,14 @@
     font-size: 5rem;
 }
 
-.call-button {
+.phone-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 50px;
 }
 
-.road-sign {
+.call-button {
     display: flex;
     align-items: center;
     margin-bottom: 70px;
@@ -104,7 +104,15 @@
     cursor: pointer;
 }
 
-.road-sign a {
+.call-button a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.call-button span {
     font-family: "Rubik Distressed", cursive;
     font-weight: 400;
     font-size: 2.5rem;
@@ -115,11 +123,11 @@
     transform: rotate(-45deg);
 }
 
-.phone {
+.phone-number {
     opacity: 0;
 }
 
-.phone span {
+.phone-number span {
     font-size: 7rem;
     color: var(--orange);
     -webkit-text-fill-color: var(--orange);
@@ -191,12 +199,12 @@
     .parallax-container {
         display: flex;
         flex-direction: column;
-        justify-content: center;
     }
     .truck {
         position: static;
         height: 35vh;
         transform: none;
+        margin-top: 30px;
     }
     .truck > div {
         position: static;
@@ -218,19 +226,19 @@
         margin-top: 10px;
         font-size: 2rem;
     }
-    .call-button {
+    .phone-container {
         margin: 32px 0;
     }
-    .road-sign {
+    .call-button {
         margin-bottom: 30px;
         height: 120px;
         width: 120px;
     }
-    .road-sign a {
+    .call-button span {
         font-size: 1.25rem;
         letter-spacing: -1px;
     }
-    .phone span {
+    .phone-number span {
         font-size: 2rem;
     }
 }
@@ -242,11 +250,11 @@
     .info-panel {
         padding-top: 55px;
     }
-    .road-sign {
+    .call-button {
         height: 100px;
         width: 100px;
     }
-    .road-sign a {
+    .call-button span {
         font-size: 1rem;
     }
 }
@@ -276,17 +284,17 @@
         align-self: center;
         font-size: 3rem;
     }
-    .call-button {
+    .phone-container {
         margin: 48px 0;
     }
-    .road-sign {
+    .call-button {
         height: 180px;
         width: 180px;
     }
-    .road-sign a {
+    .call-button span {
         font-size: 1.8rem;
     }
-    .phone span {
+    .phone-number span {
         font-size: 3rem;
     }
 }
@@ -304,15 +312,15 @@
     .headers h2 {
         font-size: 4rem;
     }
-    .road-sign {
+    .call-button {
         margin-bottom: 40px;
         height: 200px;
         width: 200px;
     }
-    .road-sign a {
+    .call-button span {
         font-size: 2rem;
     }
-    .phone span {
+    .phone-number span {
         font-size: 4rem;
     }
 }
@@ -330,15 +338,15 @@
     .headers h2 {
         font-size: 4rem;
     }
-    .call-button {
+    .phone-container {
         align-self: center;
         margin-right: 0;
         margin-bottom: 0;
     }
-    .phone {
+    .phone-number {
         align-self: center;
     }
-    .phone span {
+    .phone-number span {
         font-size: 4rem;
     }
 }
@@ -350,15 +358,15 @@
     .info-panel {
         padding: 210px 40px 40px 40px;
     }
-    .call-button {
+    .phone-container {
         margin-bottom: 100px;
     }
-    .road-sign {
+    .call-button {
         margin-bottom: 50px;
         height: 200px;
         width: 200px;
     }
-    .road-sign a {
+    .call-button span {
         font-size: 2rem;
     }
 }
@@ -404,22 +412,22 @@
         align-self: unset;
         font-size: 2rem;
     }
-    .call-button {
+    .phone-container {
         align-self: flex-end;
         margin: 32px 0;
     }
-    .road-sign {
+    .call-button {
         margin-bottom: 30px;
         height: 120px;
         width: 120px;
     }
-    .road-sign a {
+    .call-button span {
         font-size: 1.25rem;
     }
-    .phone {
+    .phone-number {
         align-self: center;
     }
-    .phone span {
+    .phone-number span {
         font-size: 2rem;
         white-space: nowrap;
     }
@@ -444,15 +452,15 @@
     .headers h2 {
         font-size: 3rem;
     }
-    .road-sign {
+    .call-button {
         margin-bottom: 50px;
         height: 200px;
         width: 200px;
     }
-    .road-sign a {
+    .call-button span {
         font-size: 2rem;
     }
-    .phone span {
+    .phone-number span {
         font-size: 3rem;
     }
 }
@@ -464,16 +472,16 @@
     .headers h1 {
         font-size: 5rem;
     }
-    .call-button {
+    .phone-container {
         margin-bottom: 50px;
     }
-    .phone span {
+    .phone-number span {
         font-size: 4rem;
     }
 }
 
 @media (min-width: 1025px) and (orientation: landscape) {
-    .road-sign {
+    .call-button {
         align-self: flex-end;
         margin-right: 200px;
     }
